Bugfix: add spacing to "I have read.." checkbox to make it easier for touch devices

--- a/css/all/all-event_form.css
+++ b/css/all/all-event_form.css
@@ -22,6 +22,13 @@
   display: inline-block;
 }
 
+#mfcs-request-create-0-form > .form-wrapper-inner > .form-item-agreement-agree,
+#mfcs-request-edit-0-form > .form-wrapper-inner > .form-item-agreement-agree {
+  margin-top: 3px;
+  margin-bottom: 10px;
+}
+
+
 
 /** Location **/
 #mfcs-request-manage-0-move-form #field-request-location-0 > .location-image-link > .location-image,
